added initial logic of project